ajustes no backend para tratar erros nos campos
